// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Typescript 3.6 detects errors 1`] = `
"31:2 - Type 'undefined[]' is not assignable to type '"auto" | "inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | readonly HyphenateCharacter[] | undefined'.
  Type 'undefined[]' is not assignable to type 'readonly HyphenateCharacter[]'.
    Type 'undefined' is not assignable to type 'HyphenateCharacter'."
`;

exports[`Typescript 3.6 detects errors 2`] = `
"42:2 - Type 'readonly [undefined]' is not assignable to type '"auto" | "inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | readonly HyphenateCharacter[] | undefined'.
  Type 'readonly [undefined]' is not assignable to type 'readonly HyphenateCharacter[]'.
    Type 'undefined' is not assignable to type 'HyphenateCharacter'."
`;

exports[`Typescript 3.6 detects errors 3`] = `
"59:2 - Type '{ unknownProperty: number; }' is not assignable to type 'Properties<0 | (string & {}), string & {}>'.
  Object literal may only specify known properties, and 'unknownProperty' does not exist in type 'Properties<0 | (string & {}), string & {}>'."
`;

exports[`Typescript 3.6 detects errors 4`] = `
"63:2 - Type 'number[]' is not assignable to type '0 | "auto" | "inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | undefined'.
  Type 'number[]' is not assignable to type '"unset"'."
`;

exports[`Typescript 3.6 detects errors 5`] = `
"64:2 - Type 'number[]' is not assignable to type '"inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | (number & {}) | undefined'.
  Type 'number[]' is not assignable to type '"unset"'."
`;

exports[`Typescript 3.6 detects errors 6`] = `
"69:6 - Type '{}' is not assignable to type 'string & {}'.
  Type '{}' is not assignable to type 'string'."
`;

exports[`Typescript 3.6 detects errors 7`] = `
"74:10 - Type 'Range' is not assignable to type '"auto"'.
  Type 'string & {}' is not assignable to type '"auto"'."
`;

exports[`Typescript 3.6 detects errors 8`] = `"81:6 - Type '1' is not assignable to type 'string | 0'."`;

exports[`Typescript 3.6 detects errors 9`] = `"93:23 - This condition will always return 'false' since the types 'string | 0 | (string | 0)[]' and '1' have no overlap."`;

exports[`Typescript 3.6 detects errors 10`] = `"107:25 - This condition will always return 'false' since the types 'string | 0' and '1' have no overlap."`;

exports[`Typescript 3.6 detects errors 11`] = `"117:14 - Argument of type '1' is not assignable to parameter of type 'string | 0 | (string | 0)[]'."`;

exports[`Typescript 3.6 detects errors 12`] = `
"118:14 - Argument of type '1[]' is not assignable to parameter of type 'string | 0 | (string | 0)[]'.
  Type '1[]' is not assignable to type '(string | 0)[]'.
    Type '1' is not assignable to type 'string | 0'."
`;

exports[`Typescript 3.6 detects errors 13`] = `"131:23 - This condition will always return 'false' since the types 'string | 0 | (string | 0)[]' and '1' have no overlap."`;

exports[`Typescript 3.6 detects errors 14`] = `"145:25 - This condition will always return 'false' since the types 'string | 0' and '1' have no overlap."`;

exports[`Typescript 3.6 detects errors 15`] = `"155:34 - Argument of type '1' is not assignable to parameter of type '0 | "auto" | "inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | "-moz-fit-content" | "-moz-max-content" | "-moz-min-content" | "fit-content" | ... 6 more ... | [...]'."`;

exports[`Typescript 3.6 detects errors 16`] = `
"156:34 - Argument of type '[1]' is not assignable to parameter of type '0 | "auto" | "inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | "-moz-fit-content" | "-moz-max-content" | "-moz-min-content" | "fit-content" | ... 6 more ... | [...]'.
  Type '[1]' is not assignable to type '[0 | "auto" | "inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | "-moz-fit-content" | "-moz-max-content" | "-moz-min-content" | "fit-content" | ... 5 more ... | "min-intrinsic"]'.
    Type '1' is not assignable to type '0 | "auto" | "inherit" | (string & {}) | "-moz-initial" | "initial" | "revert" | "revert-layer" | "unset" | "-moz-fit-content" | "-moz-max-content" | "-moz-min-content" | "fit-content" | ... 5 more ... | "min-intrinsic"'."
`;
